--- a/style.css
+++ b/style.css
@@ -63,7 +63,15 @@ header {
   font-size: 72px;
   color: #fff;
 }
-
+header nav ul {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+}
+header nav{
+  display: flex;
+  justify-content: center;
+}
 header nav ul li {
   list-style-type: none;
 }
@@ -83,6 +91,8 @@ header nav ul li a:hover {
 form {
   border: 2px solid #ff385c;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 form label {
