--- a/style.css
+++ b/style.css
@@ -118,6 +118,34 @@ form button {
   width: 100%;
 }
 
+/* -------  About ------- */
+
+.alternate-background{
+  display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+.alternate-background img{
+  height: 100%;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+/* -------  Ideas ------- */
+
+#ideas{
+  display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+#ideas img{
+  height: 100%;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
 /* -------  Footer ------- */
 
 footer {
