--- a/style.css
+++ b/style.css
@@ -161,5 +161,16 @@ footer p {
 /* -------  Media Query ------- */
 
 @media all and (min-width: 600px){
-  
+  header{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+  }
+  header h1 {
+    margin: 14px 0;
+    padding-top: 0;
+  }
+  header nav {
+    margin-top: 8px;
+  }
 }
