--- a/style.css
+++ b/style.css
@@ -200,24 +200,24 @@ footer p {
 
   /* -------  About ------- */
 
-  .alternate-background{
+  #about{
     display: flex;
     flex-direction: column;
   }
-  .alternate-background div{
+  #about div{
     display: flex;
     flex-direction: row;
     align-items: center;
   }
-  .alternate-background h2{
+  #about h2{
     margin-top: 20px;
   }
-  .alternate-background img{
+  #about img{
     float: left;
     width: 25%;
     margin: 20px;
   }
-  .alternate-background p{
+  #about p{
     float: right;
   }
 
@@ -253,7 +253,14 @@ justify-content: space-between;
     width: 90%;
   }
 
-  /* -------  Footer ------- */
-
-  
+  /* -------  Host ------- */
+#host{
+  display: flex;
+  flex-direction: row;
+}
+#host img{
+width: 80%;
+height: 70%;
+overflow: hidden;
+}
 }
